2000-04-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/print/print-util.c: do not use error_t, some systems
	define this type in errno.h. Fixes bug #9830.

2000-04-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-enums.h
	* plug-ins/script-fu/script-fu-scripts.c
	* plug-ins/script-fu/script-fu.c: implemented new argument type
	SF_OPTION which allows the user to choose from a list of options
	using a GtkOptionMenu.
	
	* plug-ins/script-fu/scripts/alien-glow-arrow.scm
	* plug-ins/script-fu/scripts/beveled-pattern-arrow.scm
	* plug-ins/script-fu/scripts/erase-rows.scm
	* plug-ins/script-fu/scripts/test-sphere.scm: use SF_OPTION

2000-04-26  Michael Natterer  <mitch@gimp.org>

	* app/color_select.c
	* app/colormaps.[ch]
	* app/context_manager.c: removed unused global variables
	[foreground|background]_pixel and [old|new]_color_pixel.

	Initialize the colormap and visual stuff with GdkRGB instead of
	GtkPreview functions (which are deprecated).

	* app/[62 files]: removed #include's (started with colormaps.h and
	couldn't stop). Also ordered them consistently and did some small
	unrelated cleanups.
	Removed variuos <stdlib.h> et.al. but checked the files carefully
	before doing so. If I was too radical and you get warnings on your
	platform, please flame me or just put them back :)

2000-04-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_object.c: on request of plug-in author
	<maurits.rijk@philips.com>, corrected initialisation of structure.
	Promises to fix bug #9212.

2000-04-26  Michael Natterer  <mitch@gimp.org>

	* app/gdisplay.[ch]
	* app/gdisplay_ops.c: made the warning_dialog a per-display
	variable. The old behaviour of having only one global variable
	can easily result in loss of work and should IMHO be considered
	a bug.

Wed Apr 26 22:35:36 CEST 2000  Stanislav Brabec  <utx@penguin.cz>

	On request of Martin Weber <martweb@gmx.net>:
	* plug-ins/bmp/bmpwrite.c: fix Bitmap_Head.biPlanes = channels.
