@@ -1,3 +1,11 @@
+2000-04-28  Jay Cox  <jaycox@earthlink.net>
+
+	* app/paint_funcs.c: Correctly initialize the max arrays in
+ 	thin_region. Fixes bug #8351
+	* app/scale.c: return from the channel_scale function if we
+ 	tried to zoom in/out too far.  This prevents some
+ 	unnecessary display redraws.
+
 2000-04-28  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/print/print-util.c: do not use error_t, some systems
